--- a/routes/question-your-situation-no-income/question-your-situation-no-income.njk
+++ b/routes/question-your-situation-no-income/question-your-situation-no-income.njk
@@ -8,12 +8,12 @@
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
             {{ radioButtons('no_income',
                 [
-                    { value: '1', text:__('your_situation.no_income.1')},
-                    { value: '2', text:__('your_situation.no_income.2')},
-                    { value: '3', text:__('your_situation.no_income.3')},
-                    { value: '4', text:__('your_situation.no_income.4')},
-                    { value: '5', text:__('your_situation.no_income.5')},
-                    { value: '6', text:__('your_situation.no_income.6')}
+                    { value: 'lost-job-employer-closed', text:__('your_situation.no_income.1')},
+                    { value: 'self-employed-closed', text:__('your_situation.no_income.2')},
+                    { value: 'unpaid-leave-to-care', text:__('your_situation.no_income.3')},
+                    { value: 'sick-or-quarantined', text:__('your_situation.no_income.4')},
+                    { value: 'parental-recently-cant-return', text:__('your_situation.no_income.5')},
+                    { value: 'ei-recently-claim-ended', text:__('your_situation.no_income.6')}
                 ],
                 data.no_income,
                 __('form.your_situation.no_income'),
