convert unchanged_income values to meaningful strings

--- a/routes/question-your-situation-unchanged-income/question-your-situation-unchanged-income.njk
+++ b/routes/question-your-situation-unchanged-income/question-your-situation-unchanged-income.njk
@@ -9,9 +9,9 @@
 
             {{ radioButtons('unchanged_income',
                 [
-                    { value: '1', text:__('your_situation.unchanged_income.1')},
-                    { value: '2', text:__('your_situation.unchanged_income.2')},
-                    { value: '3', text:__('your_situation.unchanged_income.3')}
+                    { value: 'wfh', text:__('your_situation.unchanged_income.1')},
+                    { value: 'paid-leave', text:__('your_situation.unchanged_income.2')},
+                    { value: 'retired', text:__('your_situation.unchanged_income.3')}
                 ],
                 data.your_situation.unchanged_income,
                 __('form.your_situation.unchanged_income'),
