--- a/routes/start/start.njk
+++ b/routes/start/start.njk
@@ -5,13 +5,12 @@
     <h1>{{ __('start.title') }}</h1>
 
     <div>
-    {{ banner('blue', '<p>' + __('start.intro.banner.1') + '<br /><a href="#" >' + __('start.intro.banner.2') + '</a></p>') }}
+    {{ banner('blue', '<p>' + __('start.intro.banner.1') + '</p>') }}
     </div>
 
     <h2 class="text-2xl mb-5">{{ __('start.subtitle') }}</h2>
 
     <div>
-    <p>{{ __('start.intro.1') }}</p>
     <p>{{ __('start.intro.2') | safe }}</p>
     </div>
 
