--- a/views/benefits/ei_regular_cerb-en.njk
+++ b/views/benefits/ei_regular_cerb-en.njk
@@ -4,7 +4,7 @@
   </h2>
   <ul class="list-none list-outside pl-0">
     {{ blueLI("$500 per week") }}
-    {{ blueLI("Up to 16 weeks if you keep  meeting the eligibility criteria") }}
+    {{ blueLI("Up to 16 weeks", "if you keep  meeting the eligibility criteria") }}
     {{ blueLI("First payment within 10 days of applying") }}
   </ul>
   <div class="pb-5 mt-6">
