--- a/views/benefits/ei_regular_cerb-fr.njk
+++ b/views/benefits/ei_regular_cerb-fr.njk
@@ -6,7 +6,7 @@
 
   <ul class="list-none list-outside pl-0">
     {{ blueLI("500 $ par semaine") }}
-    {{ blueLI("Jusqu’à 16 semaines tant que vous répondez aux critères d’admissibilité") }}
+    {{ blueLI("Jusqu’à 16 semaines", "tant que vous répondez aux critères d’admissibilité") }}
     {{ blueLI("À recevoir au plus tard 10 jours après la demande") }}
   </ul>
 
@@ -14,7 +14,7 @@
 
     <strong>Prochaines étapes :</strong>
     <ul class='list-outside list-disc'>
-      <li>Vous devrez répondre à quelques questions afin de déterminer si vous devez présenter la demande pour la PCU auprès de l’agence du revenu du Canada (ARC) ou Services Canada.</li>
+      <li>Vous devrez répondre à quelques questions afin de déterminer si vous devez présenter la demande auprès de l’agence du revenu du Canada (ARC) ou Services Canada.</li>
       <li>L’application vous demandera de confirmer que vous répondez aux critères d’admissibilité. Lisez attentivement les détails.</li>
       <li>Ces montants sont imposables.</li>
     </ul>
