--- a/routes/results/results.njk
+++ b/routes/results/results.njk
@@ -96,7 +96,7 @@
                 </div>
             </button>
             
-            <div class="benefits__list" id="unavailableBenefitsList" aria-labelledby="unavailableBenefitsButton">
+            <div class="benefits__list mt-4" id="unavailableBenefitsList" aria-labelledby="unavailableBenefitsButton">
                 {% for benefit in unavailableBenefits %}
                     {% include "benefits/" + benefit + "-" + getLocale() +  ".njk" %}
                 {% endfor %}
