--- a/views/_includes/feedback.njk
+++ b/views/_includes/feedback.njk
@@ -2,7 +2,7 @@
     <summary class="px-4 py-2 bg-gray-300 rounded text-center">{{ __('feedback.button') }}</summary>
     <div class="px-8 py-6 rounded border border-gray-300 bg-gray-200">
 
-      <div id="feedback-submit-error" class="hidden">
+      <div id="feedback-submit-error" tabindex="0" class="hidden">
         {{ banner('red', '<p><strong>' + __('feedback.error') + '</strong></p>')}}
       </div>
 
