--- a/views/base.njk
+++ b/views/base.njk
@@ -23,7 +23,7 @@
         <link rel="shortcut icon" href="{{ asset('/favicon.png') }}" type="image/x-icon" sizes="32x32">
         <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Noto+Sans:400,700&amp;display=fallback" rel="stylesheet">
-        <link rel="stylesheet" href="{{ asset('/dist/css/styles.css') }}?1234">
+        <link rel="stylesheet" href="{{ asset('/dist/css/styles.css') }}?{{ assetVersion() }}">
         {% include "_includes/meta.njk" %}
         {% include "_includes/ga.njk" %}
     </head>
@@ -72,7 +72,7 @@
                 {%- endfor -%}
             {%- endif -%}
 
-            <script type="text/javascript" src="{{ asset('/dist/js/app.js') }}?1234"></script>
+            <script type="text/javascript" src="{{ asset('/dist/js/app.js') }}?{{ assetVersion() }}"></script>
         {%- endblock -%}
     </body>
 </html>
